--- a/walrus.html
+++ b/walrus.html
@@ -13,14 +13,22 @@
       <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and
         deceit. Though it appears to be an innocent children's pastime,
         you may change your mind when you learn of its treacherous history.</p>
+
       <div class="walrus-hidden">
-        <p>Let's play peek-a-boo. <span class="clickable"> Click here</span> to see the surprise!</p>
+        <p>Let's play peek-a-boo. <span class="clickable 1"> Click here</span> to see the surprise!</p>
       </div>
       <div class="walrus-showing">
-        <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
+        <p>What a cute walrus! <span class="clickable 1">Click here</span> to hide her again.</p>
         <img src="img/walrus.jpeg">
       </div>
-    </div>
 
+      <div class ="walrus-2a">
+        <p>Here is another walrus! <span class="clickable 2">Click here</span> to check it out!</p>
+      </div>
+      <div class ="walrus-2b">
+        <p>Walrus is here. <span class="clickable 2">Click here</span> to close.</p>
+        <img src="img/walrus2.jpeg">
+      </div>
+    </div>
   </body>
 </html>
